--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "spotify-web-api-node": "^5.0.2",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.191",
+    "autoprefixer": "^10.4.14",
+    "lodash": "^4.17.21",
+    "postcss": "^8.4.21",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss": "^3.2.7"
   }
 }
